// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds dirname to all lifecycles 1`] = `
Object {
  "overridePreprocessor": Array [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "overrideProcessor": Array [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "overrideValidator": Array [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "postProcessor": Array [
    "<PROJECT_ROOT>",
  ],
  "preprocessor": Array [
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
  ],
  "processor": Array [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>",
  ],
  "validator": Array [
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
  ],
}
`;

exports[`allows builtin processor 1`] = `
Object {
  "example": Array [
    1,
    2,
    3,
  ],
  "inside": Array [
    1,
    3,
  ],
  "object": Array [
    Object {
      "array": Array [
        1,
      ],
      "one": true,
      "preset": 1,
    },
    Object {
      "array": Array [
        2,
      ],
      "preset": 2,
      "two": true,
    },
    Object {
      "array": Array [
        3,
      ],
      "preset": 1,
      "three": true,
    },
  ],
  "other": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`allows builtin processor override 1`] = `
Object {
  "example": Array [
    1,
    2,
    3,
  ],
  "inside": Array [
    3,
    1,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows custom preset and plugin name 1`] = `
Object {
  "customPlugin": Array [
    Object {
      "imported": Array [
        "imported plugin-01",
      ],
    },
  ],
  "example": Array [
    1,
  ],
  "inside": Array [
    1,
  ],
  "object": Object {
    "array": Array [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "presets": Array [
    "preset-02",
  ],
}
`;

exports[`allows custom processor 1`] = `
Object {
  "example": Array [
    0,
  ],
  "inside": Array [
    0,
  ],
  "object": Object {
    "array": Array [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
}
`;

exports[`allows custom processor override 1`] = `
Object {
  "example": Array [
    0,
  ],
  "inside": Array [
    3,
    0,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows disabling presets and plugins 1`] = `
Object {
  "inside": Array [
    1,
  ],
  "plugins": Array [
    "plugin-one",
  ],
  "presets": Array [
    "one",
  ],
}
`;

exports[`allows post processing 1`] = `
Object {
  "example": Array [
    6,
    4,
    2,
    0,
  ],
  "inside": Array [
    3,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows preprocessor 1`] = `
Object {
  "example": Array [
    "3",
    "2",
    "1",
    "0",
  ],
  "inside": Array [
    3,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows preprocessor override 1`] = `
Object {
  "example": Array [
    "3",
    "2",
    "1",
    "0",
  ],
  "inside": Array [
    3,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`calls presets and plugins as a function with default options = {} 1`] = `
Object {
  "plugins": Array [
    Object {
      "imported": "plugin-03",
      "plugin03Args": Object {
        "dirname": "<PROJECT_ROOT>",
        "options": Object {},
      },
    },
  ],
  "preset05Args": Object {
    "dirname": "<PROJECT_ROOT>",
    "options": Object {},
  },
}
`;

exports[`calls presets and plugins as a function with specified options 1`] = `
Object {
  "plugins": Array [
    Object {
      "imported": "plugin-03",
      "plugin03Args": Object {
        "dirname": "<PROJECT_ROOT>",
        "options": Object {
          "special": "options 03",
        },
      },
    },
  ],
  "preset05Args": Object {
    "dirname": "<PROJECT_ROOT>",
    "options": Object {
      "special": "options 05",
    },
  },
}
`;

exports[`does not mutate original config 1`] = `
Object {
  "inside": Array [
    Array [
      3,
      6,
      3,
    ],
    Array [
      1,
      2,
      3,
    ],
  ],
  "plugins": Array [
    Array [
      Object {
        "imported": Array [
          "imported plugin-02",
          "mutated imported plugin-02",
        ],
      },
      3,
    ],
    Array [
      Object {
        "imported": Array [
          "imported plugin-01",
          "mutated imported plugin-01",
        ],
      },
      3,
    ],
  ],
}
`;

exports[`handle base config as function 1`] = `
Object {
  "args": Object {
    "dirname": "<PROJECT_ROOT>",
    "options": Object {},
  },
  "plugins": Array [
    Object {
      "imported": "plugin-03",
      "plugin03Args": Object {
        "dirname": "<PROJECT_ROOT>",
        "options": Object {
          "special": "options 03",
        },
      },
    },
  ],
  "preset05Args": Object {
    "dirname": "<PROJECT_ROOT>",
    "options": Object {
      "special": "options 05",
    },
  },
}
`;

exports[`handles es module default exports 1`] = `
Object {
  "inside": Array [
    3,
    6,
  ],
  "plugins": Array [
    Object {
      "imported": Array [
        "imported plugin-04",
      ],
    },
  ],
}
`;

exports[`ignores mutated value 1`] = `
Object {
  "example": Array [
    0,
  ],
  "inside": Array [
    1,
  ],
  "object": Object {
    "array": Array [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "plugins": Array [
    Object {
      "imported": Array [
        "imported plugin-01",
      ],
    },
  ],
}
`;

exports[`mergeObject processor 1`] = `
Object {
  "example": Array [
    3,
    2,
    1,
  ],
  "inside": Array [
    3,
    1,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
      0,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
    "zero": true,
  },
  "other": 1,
}
`;

exports[`merges deep nested presets 1`] = `
Object {
  "example": Array [
    3,
    2,
    1,
  ],
  "inside": Array [
    3,
    1,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": Array [
    Object {
      "imported": Array [
        "imported plugin-01",
      ],
    },
  ],
}
`;

exports[`merges deep with custom prefix resolution 1`] = `
Object {
  "example": Array [
    3,
    2,
    1,
  ],
  "inside": Array [
    3,
    1,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": Array [
    "imported backtrack-plugin-01",
  ],
}
`;

exports[`plugins processor can be overridden 1`] = `
Object {
  "example": false,
  "inside": false,
  "object": Object {
    "array": Array [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "plugins": Array [
    Object {
      "imported": Array [
        "imported plugin-01",
      ],
    },
    Object {
      "imported": Array [
        "imported plugin-02",
      ],
    },
  ],
}
`;

exports[`preset object order matter does not matter 1`] = `
Object {
  "example": Array [
    3,
    2,
    1,
  ],
  "inside": Array [
    3,
    1,
  ],
  "object": Object {
    "array": Array [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": Array [
    Object {
      "imported": Array [
        "imported plugin-01",
      ],
    },
  ],
}
`;
